--- a/spidr-interest-form/src/index.css
+++ b/spidr-interest-form/src/index.css
@@ -1,8 +1,8 @@
 :root, body {
   font-family: 'Raleway', sans-serif !important;
+  line-height: 1.3;
   color: #fff;
   background-color: #252627;
-  line-height: 1.3;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -12,10 +12,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .form-title {
   text-align: center;
-  font-weight: 200 !important;
-  /*font-size: 2.5em;*/
   margin: -5px 0 0 0;
   position: relative;
+  font-weight: 200 !important;
+  /* font-size: 2.5em; */
 }
 
 .form-title::after {
@@ -23,16 +23,16 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   width: 200px;
   height: 2px;
-  background: #56acbd;
   margin: 10px auto 25px auto;
+  background: #56acbd;
   border-radius: 2px;
 }
 
 button {
   background: transparent;
   border: 1px solid #fff !important;
-  color: #fff;
   border-radius: 0 !important;
+  color: #fff;
   transition: background 0.25s, border-color 0.25s;
 }
 
@@ -46,4 +46,9 @@ button:hover {
 input:focus {
   outline: none;
   box-shadow: none;
+}
+
+.footer-copyright {
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
